Fix sticky hover on mobile

--- a/style.css
+++ b/style.css
@@ -57,11 +57,6 @@ body {
   display: flex;
 }
 
-.dice:hover {
-  box-shadow: 0px 0px 25px hsl(150, 100%, 66%);
-  cursor: pointer;
-}
-
 @media (max-width: 576px) {
   .container {
     width: 80vw;
@@ -70,5 +65,12 @@ body {
     background-image: url("images/pattern-divider-mobile.svg");
     width: 295px;
     height: 16px;
+  }
+}
+
+@media (hover: hover) {
+  .dice:hover {
+    box-shadow: 0px 0px 25px hsl(150, 100%, 66%);
+    cursor: pointer;
   }
 }
